<resources>
    <string name="app_name">GPS</string>
    <string name="action_skip">Skip</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="provider_gps">GPS tracker</string>
    <string name="location_settings">Open GPS settings</string>
    <string name="tv_choose_record_name">Choose record name</string>
    <string name="tv_et_comment">Enter comment for this point here</string>
    <string name="tv_gps_sensor_on">GPS ON</string>
    <string name="tv_gps_sensor_off">GPS OFF</string>
    <string name="tv_label_coordinates">Your current coordinates</string>
    <string name="tv_label_tracking_status">Monitoring your movement</string>
    <string name="tv_latitude_label">Latitude</string>
    <string name="tv_longitude_label">Longtitude</string>
    <string name="tv_status">Monitoring status</string>
    <string name="tv_state_not_set">Waiting data</string>
    <string name="tv_time_label">Time</string>
    <string name="tv_tracking_off">Location tracking is OFF right now</string>
    <string name="tv_tracking_on">Location tracking works now!</string>
    <string name="tv_wait">Waiting</string>

    <string name="tv_tracking_off_short">Tracking OFF</string>
    <string name="tv_tracking_on_short">Tracking ON</string>

    <string name="tv_editact_label_header">Here you can edit description of the saved point</string>
    <string name="tv_editact_label_coord">Coordinates and time of the point</string>
    <string name="tv_label_save_data">Save tracks and point</string>

    <string name="tv_list_of_all_points">All saved points</string>
    <string name="text_attach_gps_coordinates">Attach GPS coordinates?</string>
    <string name="text_record_name">Record name</string>

    <string name="btn_delete_data">Delete NOW</string>
    <string name="btn_gps_status">Open location (GPS) settings</string>
    <string name="btn_get_coordinates">Save current coordinates</string>
    <string name="btn_start_service">Start tracking</string>
    <string name="btn_stop_service">Stop tracking</string>
    <string name="btn_check_service">Состояние сервиса</string>
    <string name="btn_data_activity">Show saved data</string>
    <string name="btn_show_hide_sql_delete_points">Delete all points?</string>
    <string name="btn_show_hide_sql_delete_one_track">Delete chosen track?</string>
    <string name="btn_show_hide_sql_delete_all_tracks">Delete all tracks?</string>
    <string name="btn_label_confirm_delete_points">Confirm delete points?</string>
    <string name="btn_label_confirm_delete_tracks">Confirm delete tracks?</string>
    <string name="btn_sql_delete">Delete now!</string>
    <string name="btn_save_data">Track export to file</string>
    <string name="btn_net_send">Save point to server</string>
    <string name="btn_save_points">Points export to file</string>
    <string name="btn_record_start">Start record</string>
    <string name="btn_record_pause">Pause record</string>
    <string name="btn_record_stop">Stop record</string>

    <string name="toast_service_alr_started">Сервис уже был запущен</string>
    <string name="toast_service_alr_stopped">Сервис и так остановлен!</string>
    <string name="toast_service_alert_gps">Запуск невозможен! Включите GPS!</string>
    <string name="toast_point_saved">Point saved!</string>
    <string name="toast_deleted_tracks">Tracks deleted:</string>
    <string name="toast_deleted_points">Points deleted:</string>


    <string name="toast_mesg_error_create_file">Ошибка создания файла!</string>
    <string name="toast_mesg_create_file_success">Файл уже в папке Download!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
