<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".RecordAudioActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_choose_record_name"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text=""
        android:id="@+id/etRecordName"
        />

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:text="@string/btn_record_start"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:text="@string/btn_record_pause"/>
    </LinearLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btn_record_stop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="wrap_content"
        android:text="@string/text_attach_gps_coordinates"
        android:textSize="25sp"/>
        <Switch
            android:id="@+id/switch_record_gps_usage"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <Button
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_skip"
        android:onClick="skipAndStartMA" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_show_ads"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>