<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorForBackgroundMainActivity"
    android:padding="5dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llFragmMainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvTitleGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/provider_gps"
                android:textSize="30sp"
                android:onClick="onClick"
               />

            <TextView
                android:id="@+id/tvTitleServiceStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text=""
                android:textSize="20sp"
                android:textAlignment="gravity"
                android:gravity="center_vertical|end"
                android:onClick="onClick"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_coordinates"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_horiz_usual_size"
            android:background="@drawable/rounded_corner">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:text="@string/tv_latitude_label"
                android:textSize="@dimen/text_lat_lon_time_main"
                />
            <TextView
                android:id="@+id/tvLatitudeStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/tv_state_not_set"
                android:textSize="@dimen/text_big_usual_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_horiz_usual_size"
            android:background="@drawable/rounded_corner">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:text="@string/tv_longitude_label"
                android:textSize="@dimen/text_lat_lon_time_main"
                />
            <TextView
                android:id="@+id/tvLongitudeStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/tv_state_not_set"
                android:textSize="@dimen/text_big_usual_size"
                />
        </LinearLayout>
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_horiz_usual_size"
            android:background="@drawable/rounded_corner">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:text="@string/tv_time_label"
                android:textSize="@dimen/text_usual_size"
                />
            <TextView
                android:id="@+id/tvTimeStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/tv_state_not_set"
                android:textSize="@dimen/text_time_info_main"
                />
        </LinearLayout>
        <EditText
            android:id="@+id/editTextCommentToPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorForBackgroundEt"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLines="3"
            android:minEms="10"
            android:textSize="24dp"
            android:paddingHorizontal="@dimen/padding_horiz_usual_size"
            android:text="@string/tv_et_comment"
            />
        <Button
            android:id="@+id/button_save_point_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_get_coordinates"
            />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                android:id="@+id/btnLocationSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:onClick="onClick"
                android:text="@string/btn_gps_status"/>
            <TextView
                android:id="@+id/tvEnabledGPS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:textSize="@dimen/text_usual_size"
                android:textStyle="bold"
                android:textAlignment="gravity"
                android:gravity="center_vertical|center"
                android:text="@string/tv_wait"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_horiz_usual_size"
            android:background="@drawable/rounded_corner_no_color">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvServiceStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/tv_status"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical|center"
                    android:textSize="@dimen/text_usual_size"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/buttonStartService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_start_service" />
                <Button
                    android:id="@+id/buttonStopService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_stop_service" />
            </LinearLayout>
        </LinearLayout>



        <Space
            android:layout_width="1dp"
            android:layout_height="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv_label_save_data"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonExportBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_save_data" />
            <Button
                android:id="@+id/buttonExportPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_save_points" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonOpenDataActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_data_activity" />

        <TextView
            android:id="@+id/tvDebugging1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tv1"/>
        <TextView
            android:id="@+id/tvDebugging2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tv2" />
        <TextView
            android:id="@+id/tvDebugging3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tv3" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>