<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="LoginActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
>
        <Button
            android:id="@+id/btnShowLogin"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:text="@string/action_login"
            android:onClick="onClick">
        </Button>
        <Button
            android:id="@+id/btnShowRegister"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:text="@string/action_register"
            android:onClick="onClick">
        </Button>
    </android.support.v7.widget.LinearLayoutCompat>    <FrameLayout
        android:id="@+id/frgmContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        >
    </FrameLayout>

    <Button
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/action_skip"
        android:onClick="skipAndStartMA" />

</android.support.v7.widget.LinearLayoutCompat>